796 implemented new health check endpoint with db check
