# src/interface/swagger.json
@@ -11,6 +11,27 @@
         "https"
     ],
     "paths": {
+        "/health": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "deprecated": false,
+                "summary": "Gets the health of the service and sub-services (i.e. database).",
+                "operationId": "getHealth",
+                "tags": [
+                    "getHealth"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A valid and health service."
+                    },
+                    "502": {
+                        "description": "API is live, but error connecting to required sub-service."
+                    }
+                }
+            }
+        },
         "/settlementWindows/{id}": {
             "get": {
                 "produces": [
